sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  val n = getNombreValeurs()
  for(ind<- 0, n-2)
  {
    var i = ind
    while(plusPetit(i, i+1))
    {
      echange(i, i+1)
    }
  }
}
